style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* End Meyer reset */

* {
    box-sizing: border-box;
    background-color: rgb(252, 250, 250);
}

body {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 100vh;
    width: 100vw;
    font-family: 'Poppins', sans-serif;
    
}

.header {
    flex: 1;
    height: 100vh;
    background-image: url("szabo-viktor-28ZbKOWiZfs-unsplash.jpg");
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.header > h1, .header > p, p > a {
    background: transparent;
    text-align: center;
    color: black;
}

.header > h1 {
    font-size: x-large;
}

.content {
    flex: 2;
    padding: 15px;
}

.cta, .popout, .footer {
    padding: 50px 0px;
}

button {
    padding: 10px 40px;
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    margin: 30px 0px;
    background-color: rgb(66, 219, 212);
    border-radius: 7px;
}

.popout {
    display: flex;
    flex-wrap: wrap;
    background-color: white;
    box-shadow: 1px 4px 10px -3px black;
}

.item {
    flex: 1;
    margin: 10px 0px;
}

